--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,10 @@
     "react-dom": "^18.3.1",
     "lucide-react": "^0.263.1",
     "jspdf": "^2.5.1",
-    "jszip": "^3.10.1"
+    "jszip": "^3.10.1",
+    "@langchain/google-genai": "^0.2.14",
+    "@langchain/langgraph": "^0.3.8",
+    "dotenv": "^17.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
